public/stylesheets/style.less
@import "public/stylesheets/mixins.less";

body {
  background: url(../images/background.png) repeat-x;
  font-family: "Century Gothic","Trebuchet MS",Verdana,Arial,Helvetica,sans-serif;
  padding: 60px 0;
}

.center {
  text-align: center;
}
.tiny {
  font-size: 0.8em;
}

#standard {
  #header {
    background: none;

    h1 {
      text-align: center;
      text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
    }
  }
}

/**
 * Homepage
 */
#cards {
  position: relative;
}

.card {
  background-image: url(../images/sprite.png) no-repeat;
  height: 400px;
  border-radius: 10px;
  position: relative;
  z-index: 10;

  &:hover,
  &:focus {
    box-shadow: 0px 0px 10px #999;
  }

  h2 {
    color: #FFF;
    font-size: 3em;
    font-weight: normal;
    left: 20px;
    position: absolute;
    text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
    top: 50px;
  }

  .description {
    color: #FFF;
    padding: 0 25px;
    position: absolute;
    top: 150px;
    width: 200px;
  }

  ul {
    border-bottom: 1px dotted #CCC;
    left: 25px;
    list-style: none;
    margin: 0;
    position: absolute;
    top: 250px;
    width: 200px;
  }
  li {
    border: 1px dotted #CCC;
    border-width: 1px 0 0 0;
  }
  a {
    color: #FFF;
    display: block;
    padding: 1em;
  }

}
#card-cv {
  .background-gradient-img(#1e5799, #00d5f9, 'sprite.png');
  background-position: 1px 0;

  a:hover,
  a:focus {
    background: #00d5f9;
  }
}
#card-projects {
  .background-gradient-img(#ff0074, #ff00d0, 'sprite.png');
  background-position: 701px 0;

  a:hover,
  a:focus {
    background: #ff6dcb;
  }
}
#card-contact {
  .background-gradient-img(#3fff00, #bdff00, 'sprite.png');
  background-position: 401px 0;

  a:hover,
  a:focus {
    background: #bdff00;
  }
}

.reflexion {
  border-radius: 10px;
  height: 150px;
  opacity: 0.75;
  position: absolute;
  top: 402px;
  width: 300px;
  z-index: 0;
}
#reflexion-card-cv {
  .background-gradient(#FFF, #1e5799);
  left: 20px;
}
#reflexion-card-projects {
  .background-gradient(#FFF, #ff0074);
  left: 340px;
}
#reflexion-card-contact {
  .background-gradient(#FFF, #3fff00);
  left: 660px;
}

.card-shadow {
  background: url(../images/sprite.png) no-repeat -634px -538px;
  height: 30px;
  position: absolute;
  top: 380px;
  width: 337px;
  z-index: 5;
}
#card-shadow-cv {
  left: 10px;
}
#card-shadow-projects {
  left: 330px;
}
#card-shadow-contact {
  left: 650px;
}

/**
 * Contact
 */
#contact {
  h2 {
    text-align: center;
  }
  h3 {
    margin: 1em 0 2em;
    text-align: center;
  }
  section {
    position: relative;
  }
  .contact-logo-wrapper {
    height: 200px;
    position: relative;
    width: 120px;
  }
  .contact-logo, .contact-logo-reflect {
    background: url(../images/sprite.png) no-repeat;
    height: 130px;
    left: 50px;
    position: absolute;
    top: 0;
    width: 120px;
    z-index: 10;
  }
  .contact-logo-reflect {
    background-position: 0 -530px;
    top: 72px;
    z-index: 5;
  }
  #contact-mail {
    background-position: -240px -400px;
  }
  #contact-mail-reflect {
    background-position: -240px -530px;
  }
  #contact-phone {
    background-position: -360px -400px;
  }
  #contact-phone-reflect {
    background-position: -360px -530px;
  }
  #contact-twitter {
    background-position: 0 -400px;
  }
  #contact-twitter-reflect {
    background-position: 0 -530px;
  }
  #contact-facebook {
    background-position: -120px -400px;
  }
  #contact-facebook-reflect {
    background-position: -120px -530px;
  }

  .contact-details {
    background: #000000;
    background: rgba(0, 0, 0, 0.8);
    border-radius: 6px;
    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
    padding: 3px;
    position: absolute;
    top: 250px;
    width: 220px;

    .arrow {
      border-left: 5px solid transparent;
      border-right: 5px solid transparent;
      border-bottom: 5px solid #000000;
      display: block;
      height: 0;
      left: 50%;
      margin-left: -5px;
      position: absolute;
      top: -5px;
      width: 0;
    }

    dl {
      margin: 0;
    }

    dt {
      background-color: #f5f5f5;
      border-radius: 3px 3px 0 0;
      border-bottom: 1px solid #eee;
      font-weight: bold;
      padding: 9px 15px;
      line-height: 1;

      abbr {
        font-weight: bold;
      }
    }
    dd {
      background-color: #ffffff;
      background-clip: padding-box;
      border-radius: 0 0 3px 3px;
      margin: 0;
      padding: 14px;
    }

    ul {
      margin: 0 0 0 1em;
    }
  }
}

/**
 * CV
 */
#cv {
  background: #DFDFDF;
  margin: 66px auto 0;
  padding: 0 0 40px;

  h1 {
    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
  }

  #header, #footer {
    background: #F8F8F8;
    border-bottom: 1px solid #DFDFDF;
    border-radius: 5px 5px 0 0;
    padding: 3em 1em 2em;

    hgroup {
      padding: 14px 0;
    }
    h1, h2 {
      margin: 0;
    }
  }

  #footer {
    border-radius: 0 0 5px 5px;
    margin-top: 0;
  }

  .social-links {
    float: left;
    margin: 0;
    width: 100%;

    li {
      float: left;
      list-style: none;
    }
    .social-icon {
      display: block;
      height: 32px;
      overflow: hidden;
      margin: 2px;
      position: relative;
      width: 32px;

      span {
        background: #F8F8F8 url(../images/sprite.png) no-repeat -599px -400px;
        height: 100%;
        position: absolute;
        width: 100%;
      }
    }
    .icon-delicious span { background-position: -700px -400px; }
    .icon-facebook span { background-position: -732px -400px; }
    .icon-flickr span { background-position: -764px -400px; }
    .icon-foursquare span { background-position: -796px -400px; }
    .icon-github span { background-position: -700px -432px; }
    .icon-googleplus span { background-position: -732px -432px; }
    .icon-lastfm span { background-position: -764px -432px; }
    .icon-linkedin span { background-position: -796px -432px; }
    .icon-skype span { background-position: -700px -464px; }
    .icon-tumblr span { background-position: -732px -464px; }
    .icon-twitter span { background-position: -764px -464px; }
    .icon-youtube span { background-position: -796px -464px; }
  }

  section {
    background: #FFF;
    border-bottom: 1px solid #DFDFDF;
    padding: 30px 0;
  }

  #experience, #study {
    article {
      border-bottom: 1px solid #DFDFDF;
      margin-bottom: 20px;
      padding-bottom: 20px;
      position: relative;
    }
    article.last-item {
      border-bottom: 0;
      margin-bottom: 0;
      padding-bottom: 0;
    }

    h3 {
      line-height: 12px;
    }
    h4 {
      font-style: italic;
      font-weight: normal;
      line-height: 24px;
      margin-bottom: 24px;
    }
    h5 {
      background: #EEE;
      float: right;
      font-size: 0.8em;
      font-weight: normal;
      line-height: 1em;
      padding: 1em;
    }
  }

  #study {
    td {
      height: 36px;
      vertical-align: middle;
    }
    .first-item td {
      border-top: 0;
    }
  }

  .company-logo {
    background: url(../images/sprite.png) no-repeat 0 -675px;
    height: 115px;
    left: -220px;
    overflow: hidden;
    position: absolute;
    top: 25px;
    width: 110px;
  }
  .company-logo-atinternet { background-position: 0px -675px; left: -130px; }
  .company-logo-systonic { background-position: -200px -645px; left: -170px; width: 155px; }
  .company-logo-cleverage { background-position: -400px -645px; left: -130px; }
  .company-logo-iut { background-position: -800px -675px; left: -130px; }
  .company-logo-quiksilver { background-position: -600px -655px; height: 80px; top: 40px; width: 200px; }

  #skills {
    .skill-title {
      width: 140px;
    }
    .details {
      color: #808080;
      font-size: 0.9em;
    }
    .stars {
      padding: 9px 0;
      position: relative;
      text-align: center;
      width: 125px;

      .stars0
      , .stars1
      , .stars2
      , .stars3
      , .stars4
      , .stars5 {
        background: url(../images/sprite.png) no-repeat -479px -400px;
        position: absolute;
        width: 100%;
        height: 23px;
      }

      .stars0 {
        background-position: -480px -400px;
        position: absolute;
        width: 100%;
        height: 23px;
      }
      .stars1 {
        background-position: -480px -423px;
      }
      .stars2 {
        background-position: -480px -446px;
      }
      .stars3 {
        background-position: -480px -469px;
      }
      .stars4 {
        background-position: -480px -492px;
      }
      .stars5 {
        background-position: -480px -515px;
      }
    }
  }
}

@import "public/stylesheets/print.less";

